<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_noncard_holder"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ssith123.unoapps.Activity.NoncardHolder"
    tools:showIn="@layout/activity_noncard_holder">
<TextView
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_marginTop="10dp"
    android:text="@string/donthavediscountcard"
    android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/discountcardbenefittext"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/termcondid"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:checked="false"
        android:layout_height="wrap_content"
        android:text="@string/termcondition" />
    <Button
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/yesiwant"
        android:id="@+id/iwantcard"
        android:onClick="cardgetClick"
        android:layout_height="wrap_content" />
</LinearLayout>
