<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_sign_up"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.ssith123.unoapps.SignUp"
        tools:showIn="@layout/activity_sign_up">
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/signuptitle"
            android:gravity="center"
            style="@style/signupheadtext_style1"
            android:layout_height="wrap_content" />
        <!--firstname-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilfirstname"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:textColorHint="#fff"
            android:layout_height="wrap_content"
            android:padding="1dp">
            <AutoCompleteTextView
                android:id="@+id/txtfirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="15"
                android:imeOptions="actionNext"
                android:focusable="true"
                style="@style/textinputstyle"
                android:focusableInTouchMode="true"
                android:textColorHint="#fff"
                android:hint="@string/signup_firstname"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>
        <!--lastname-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tillastname"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:textColorHint="#fff"
            android:layout_height="wrap_content"
            android:padding="1dp">
            <AutoCompleteTextView
                android:id="@+id/txtlastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_lastname"
                android:focusable="true"
                style="@style/textinputstyle"
                android:imeOptions="actionNext"
                android:focusableInTouchMode="true"
                android:inputType="text"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>
        <!--mobile number-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobilenumtil"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:textColorHint="#fff"
            android:layout_height="wrap_content"
            android:padding="1dp">
            <AutoCompleteTextView
                android:id="@+id/txtmobilenum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                style="@style/textinputstyle"
                android:hint="@string/signup_mobile"
                android:inputType="phone"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>
        <!--email id-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailtil"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:textColorHint="#fff"
            android:layout_height="wrap_content"
            android:padding="1dp">
            <AutoCompleteTextView
                android:id="@+id/txtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:hint="@string/signup_email"
                android:inputType="text"
                style="@style/textinputstyle"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>
        <!--password-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordtil"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            android:textColorHint="#fff"
            android:layout_height="wrap_content"
            android:padding="1dp">
            <AutoCompleteTextView
                android:id="@+id/txtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                style="@style/textinputstyle"
                android:hint="@string/signup_password"
                android:inputType="textPassword"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>
        <!--confirmpassword-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/cpasswordtil"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            android:textColorHint="#fff"
            android:layout_height="wrap_content"
            android:padding="1dp">
            <AutoCompleteTextView
                android:id="@+id/txtcpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                style="@style/textinputstyle"
                android:hint="@string/signup_confirmpassword"
                android:inputType="textPassword"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnSignUp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="#fff"
                android:layout_gravity="center"
                android:background="@drawable/button_background1"
                android:onClick="butnClick"
                android:text="@string/register" />
            <Button
                android:id="@+id/btnfacebboksign"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="#fff"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:onClick="butnClick"
                android:background="@drawable/button_background"
                android:text="@string/facebook" />
            <Button
                android:id="@+id/btnClear"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:onClick="butnClick"
                android:layout_gravity="center"
                android:background="@drawable/button_background"
                android:layout_marginTop="10dp"
                android:textColor="#fff"
                android:text="@string/signup_buttonclear" />
        </LinearLayout>
        <!--<TextView-->
        <!--android:id="@+id/tvIsConnected"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:background="#FF0000"-->
        <!--android:textColor="#FFF"-->
        <!--android:textSize="18sp"-->
        <!--android:layout_marginBottom="5dp"-->
        <!--android:text="is connected?" />-->
    </LinearLayout>
</ScrollView>