<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ssith123.unoapps.Activity.Home"
    tools:showIn="@layout/activity_home">
    <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:background="@mipmap/ic_launcher"-->
        <!--android:layout_height="wrap_content" />-->
    <android.support.v4.widget.NestedScrollView
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <!--first row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:foreground="?selectableItemBackground"
                    android:background="?selectableItemBackground"
                    android:id="@+id/cardview1"
                    android:onClick="butnClick"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="80dp"
                            android:id="@+id/discountimg"
                            android:layout_height="80dp"
                            android:src="@drawable/discountimage" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/discounttext"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/unocard"
                            />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:onClick="butnClick"
                    android:foreground="?selectableItemBackground"
                    android:background="?selectableItemBackground"
                    android:id="@+id/cardview2"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="80dp"
                            android:id="@+id/busnesslstimg"
                            android:layout_gravity="center"
                            android:layout_height="80dp"
                            android:src="@drawable/businesslisting" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:id="@+id/businesslisttxt"
                            android:layout_height="wrap_content"
                            android:text="@string/businesslisting" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <!--second row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:foreground="?selectableItemBackground"
                    android:background="?selectableItemBackground"
                    android:id="@+id/cardview3"
                    android:onClick="butnClick"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="80dp"
                            android:id="@+id/discountlistimg"
                            android:layout_height="80dp"
                            android:src="@drawable/discountlistimg" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/discountlisttext"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/discountlist"
                            />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:onClick="butnClick"
                    android:foreground="?selectableItemBackground"
                    android:background="?selectableItemBackground"
                    android:id="@+id/cardview4"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="80dp"
                            android:id="@+id/eventimage"
                            android:layout_gravity="center"
                            android:layout_height="80dp"
                            android:src="@drawable/eventimage" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:id="@+id/eventtext"
                            android:layout_height="wrap_content"
                            android:text="@string/event" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <!--third row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:foreground="?selectableItemBackground"
                    android:background="?selectableItemBackground"
                    android:id="@+id/cardview5"
                    android:onClick="butnClick"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="80dp"
                            android:id="@+id/couponimg"
                            android:layout_height="80dp"
                            android:src="@drawable/coupo" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/coupontext"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/coupontext"
                            />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:onClick="butnClick"
                    android:foreground="?selectableItemBackground"
                    android:background="?selectableItemBackground"
                    android:id="@+id/cardview6"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="80dp"
                            android:id="@+id/registerimage"
                            android:layout_gravity="center"
                            android:layout_height="80dp"
                            android:src="@drawable/registerimg" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:id="@+id/registertext"
                            android:layout_height="wrap_content"
                            android:text="@string/registertext" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
</android.support.v4.widget.NestedScrollView>
</RelativeLayout>
